added hourly task to overdue updates

--- a/src/main/resources/templates/tasks.html
+++ b/src/main/resources/templates/tasks.html
@@ -9,6 +9,7 @@
     <link th:href="@{/css/tasks.css}" rel="stylesheet">
 </head>
 <body>
+<div th:replace="~{fragments/navbar :: navbar}"></div>
 <div class="task-section">
     <h2 class="task-header">
         <i class="bi bi-list-task me-2"></i>Tasks Assigned To You
