--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -14,6 +14,9 @@
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/tasks}" th:classappend="'active'">Tasks</a>
                 </li>
+                <li class = "nav-item">
+                    <a class="nav-link" th:href="@{/dashboard}" th:classappend = "'active'">Dashboard</a>
+                </li>
 
             </ul>
             <div class="d-flex">
