--- a/src/main/resources/templates/fragments/dashboardColumn.html
+++ b/src/main/resources/templates/fragments/dashboardColumn.html
@@ -14,12 +14,20 @@
                 <div class="card mb-3">
                     <div class="card-body">
                         <h6 th:text="${task.title}"></h6>
-                        <form th:if ="${task.status == TaskStatus.TODO}" th:action="@{'/tasks/' + ${task.id} + '/accept'}" method="post">
-                            <button type="submit" th:text="Accept" class="btn-accept"></button>
-                        </form>
-                        <form th:if ="${task.status == TaskStatus.IN_PROGRESS || task.status == TaskStatus.OVERDUE}" th:action="@{'/tasks/' + ${task.id} + '/complete'}" method="post">
-                            <button type="submit" th:text="Complete" class="btn-complete"></button>
-                        </form>
+
+                        <div class="assignee-row">
+                            <span th:if="${task.assignedTo != null}"
+                                th:text="${task.assignedTo.firstName +' '+ task.assignedTo.lastName}"
+                                class="assignee-text"></span>
+                            <div class="button-container">
+                                <form th:if ="${task.status == TaskStatus.TODO && (task.assignedTo == null || task.assignedTo.id == currentUserId)}" th:action="@{'/tasks/' + ${task.id} + '/accept'}" method="post">
+                                    <button type="submit" th:text="Accept" class="btn-accept"></button>
+                                </form>
+                                <form th:if ="${(task.status == TaskStatus.IN_PROGRESS || task.status == TaskStatus.OVERDUE)&& task.assignedTo.id == currentUserId }" th:action="@{'/tasks/' + ${task.id} + '/complete'}" method="post">
+                                    <button type="submit" th:text="Complete" class="btn-complete"></button>
+                                </form>
+                            </div>
+                        </div>
 
                         <p class="card-text" th:text="${task.description}"></p>
                         <small class="text-muted"
