--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <body>
 <!-- Navbar Fragment -->
 <nav th:fragment="navbar" class="navbar navbar-expand-lg navbar-dark bg-primary">
@@ -16,6 +16,10 @@
                 </li>
                 <li class = "nav-item">
                     <a class="nav-link" th:href="@{/dashboard}" th:classappend = "'active'">Dashboard</a>
+                </li>
+
+                <li class = "nav-item" sec:authorize="hasRole('ADMIN')">
+                    <a class="nav-link" th:href="@{/users}" th:classappend = "'active'">Users</a>
                 </li>
 
             </ul>
