--- a/src/main/resources/static/css/tasks.css
+++ b/src/main/resources/static/css/tasks.css
@@ -45,6 +45,10 @@ body {
             background-color: #ffd166;
             color: #333;
         }
+        .status-BACKLOG {
+            background-color: #d3d3d3;
+            color: white;
+        }
         .status-IN_PROGRESS {
             background-color: #06d6a0;
             color: white;
