--- a/src/main/resources/templates/tasks.html
+++ b/src/main/resources/templates/tasks.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 <div th:replace="~{fragments/navbar :: navbar}"></div>
+<div class="container">
 <div class="task-section">
     <h2 class="task-header">
         <i class="bi bi-list-task me-2"></i>Tasks Assigned To You
@@ -47,6 +48,7 @@
         </table>
     </div>
 </div>
+</div>>
 <div class="container">
 <!-- Created Tasks Section -->
 <div class="task-section">
