--- a/src/main/resources/templates/allUsers.html
+++ b/src/main/resources/templates/allUsers.html
@@ -15,7 +15,7 @@
 <div class="container">
     <div class="user-section">
         <h2 class="user-header">
-            <i class="bi bi-pencil-square me-2"></i>Tasks You Created
+            <i class="bi bi-pencil-square me-2"></i>List of All users
         </h2>
         <button class="add-user-btn btn btn-primary" data-bs-toggle="modal" data-bs-target="#addUserModal">
             <i class="bi bi-plus"></i>
@@ -63,6 +63,36 @@
     </div>
 </div>
 
+<div class="modal fade" id="editUserModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Edit user</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="mb-3">
+                        <label for="userFirstName" class="form-label">First Name</label>
+                        <input type="text" class="form-control" id="userFirstName" name="firstName" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="userLastName" class="form-label">Last Name</label>
+                        <input type="text" class="form-control" id="userLastName" name="lastName">
+                    </div>
+                    <div class="mb-3">
+                        <label for="userEmail" class="form-label">Email</label>
+                        <input type="text" class="form-control" id="userEmail" name="email" required>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-primary" id = "confirmChanges">Confirm changes</button>
+                </div>
+        </div>
+    </div>
+</div>
+
+
 <div class="modal fade" id="deleteConfirmModal" tabindex="-1" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -82,6 +112,7 @@
 </div>
 
 <script th:src="@{/js/delete-user-modal.js}" defer></script>
+<script th:src="@{/js/edit-user-modal.js}" defer></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
