--- a/src/main/resources/templates/currentUser.html
+++ b/src/main/resources/templates/currentUser.html
@@ -18,7 +18,7 @@
         <h2>User Profile</h2>
     </div>
 
-    <form id="profileForm" th:object="${editedUser}" th:action="@{/user/save}" method="post">
+    <form id="profileForm" th:object="${editedUser}" th:action="@{/user/saveProfile}" method="post">
         <div class="form-group">
             <label for="firstName">First Name</label>
             <input type="text" id="firstName" name="firstName" th:field="*{firstName}">
@@ -39,13 +39,64 @@
             </div>
         </div>
 
+
         <div class="button-group">
             <button type="submit" class="btn btn-primary" id="saveChangesBtn">Save Changes</button>
-            <button type="button" class="btn btn-secondary" id="changePasswordBtn">Change Password</button>
+            <button type="button" class="btn btn-secondary" id="showPasswordChangeBtn">Change Password</button>
         </div>
     </form>
+
+
+    <div id="passwordChangeSection" class="mt-4" style="display: none;"
+         th:data-show-password="${showPasswordSection}">
+        <form id="passwordChangeForm" th:object="${passwordChange}"
+              th:action="@{/user/changePassword}" method="post">
+
+            <div class="form-group mb-3">
+                <label>Current Password</label>
+                <input type="password" th:field="*{oldPassword}" class="form-control"
+                       th:classappend="${#fields.hasErrors('oldPassword')} ? 'is-invalid' : ''">
+                <div th:if="${#fields.hasErrors('oldPassword')}" class="invalid-feedback">
+                    <span th:errors="*{oldPassword}"></span>
+                </div>
+            </div>
+
+
+            <div class="form-group mb-3">
+                <label>New Password</label>
+                <input type="password" th:field="*{newPassword}" class="form-control"
+                       th:classappend="${#fields.hasErrors('newPassword')} ? 'is-invalid' : ''">
+                <div th:if="${#fields.hasErrors('newPassword')}" class="invalid-feedback">
+                    <span th:errors="*{newPassword}"></span>
+                </div>
+            </div>
+
+
+            <div class="form-group mb-3">
+                <label>Confirm Password</label>
+                <input type="password" th:field="*{confirmNewPassword}" class="form-control"
+                       th:classappend="${#fields.hasErrors('confirmNewPassword')} ? 'is-invalid' : ''">
+                <div th:if="${#fields.hasErrors('confirmNewPassword')}" class="invalid-feedback">
+                    <span th:errors="*{confirmNewPassword}"></span>
+                </div>
+            </div>
+
+
+            <div class="button-group">
+                <button type="button" id="cancelPasswordChangeBtn" class="btn btn-outline-secondary">
+                    Cancel
+                </button>
+                <button type="submit" class="btn btn-danger">Save Password</button>
+            </div>
+
+        </form>
+
+    </div>
+
+
 </div>
 
+<script th:src="@{/js/currentUser.js}" defer></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
