--- a/src/main/resources/templates/tasks.html
+++ b/src/main/resources/templates/tasks.html
@@ -31,7 +31,7 @@
             <tbody>
             <tr th:each="task, status : ${assignedTasks}">
                 <td th:text="${status.count}"></td>
-                <td th:text="${task.title}"></td>
+                <td th:text="${task.title}" th:data-task-id="${task.id}" onclick="openTask(this)"></td>
                 <td th:text="${task.description}"></td>
                 <td>
                     <span th:classappend="'status-badge status-' + ${task.status}"
@@ -75,7 +75,7 @@
             <tbody>
             <tr th:each="task, status : ${createdTasks}">
                 <td th:text="${status.count}"></td>
-                <td th:text="${task.title}"></td>
+                <td th:text="${task.title}" th:data-task-id="${task.id}" onclick="openTask(this)"></td>
                 <td th:text="${task.description}"></td>
                 <td>
                     <span th:classappend="'status-badge status-' + ${task.status}"
@@ -120,6 +120,15 @@
                         <input th:field= "*{dueDate}" type="datetime-local" class="form-control" id="taskDueDate" name="dueDate">
                     </div>
                     <div class="mb-3">
+                        <label for="taskPriority" class="form-label">Priority</label>
+                        <select th:field= "*{priority}" class="form-select" id="taskPriority" name="taskPriority">
+                            <option th:each = "priority : ${priorityList}"
+                                    th:value ="${priority}"
+                                    th:text="${priority}"> </option>
+                        </select>
+                    </div>
+
+                    <div class="mb-3">
                         <label>Assign To</label>
                         <select th:field="*{userId}" class="form-select" name="assignedTo" id ="assignedTo">
                             <option value="">Unassigned</option>
@@ -135,6 +144,13 @@
         </div>
     </div>
 </div>
+
+<script>
+    function openTask(card){
+        const taskId = card.getAttribute('data-task-id');
+        window.location.href = `/tasks/${taskId}`;
+    }
+</script>
 
 <script th:src="@{/js/task-modal.js}" defer></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
