--- a/src/main/resources/static/css/allUsers.css
+++ b/src/main/resources/static/css/allUsers.css
@@ -11,7 +11,9 @@ body {
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
-
+.modal{
+    z-index: 1060;
+}
 /* Header Section */
 .user-section {
     margin-bottom: 30px;
