--- a/src/main/resources/templates/fragments/dashboardColumn.html
+++ b/src/main/resources/templates/fragments/dashboardColumn.html
@@ -14,6 +14,14 @@
                 <div class="card mb-3">
                     <div class="card-body" th:data-task-id="${task.id}" onclick="openTask(this)">
                         <h6 th:text="${task.title}"></h6>
+                        <span th:text="${task.priority?.name()}"
+                              th:classappend = "${task.priority == TaskPriority.MINOR}? 'bg-secondary':
+                              (${task.priority == TaskPriority.NORMAL}? 'bg-info':
+                              (${task.priority == TaskPriority.CRITICAL}? 'bg-warning': 'bg-danger'))"
+                        class="badge rounded-pill priority-badge">
+
+
+                        </span>
 
                         <div class="assignee-row">
                             <span th:if="${task.assignedTo != null}"
