--- a/src/main/resources/templates/tasks.html
+++ b/src/main/resources/templates/tasks.html
@@ -23,6 +23,7 @@
                 <th>Task Title</th>
                 <th>Description</th>
                 <th>Status</th>
+                <th>Priority</th>
                 <th>Creation Date</th>
                 <th>Due Date</th>
                 <th>Last Updated</th>
@@ -36,6 +37,15 @@
                 <td>
                     <span th:classappend="'status-badge status-' + ${task.status}"
                           th:text="${task.status}"></span>
+                </td>
+                <td>
+                    <span th:text ="${task.priority}"
+                          class="priority-badge"
+                          th:classappend="${task.priority == priorityClass.MINOR}? 'bg-secondary':
+                              (${task.priority == priorityClass.NORMAL}? 'bg-info':
+                              (${task.priority == priorityClass.CRITICAL}? 'bg-warning': 'bg-danger'))">
+
+                    </span>
                 </td>
                 <td th:text="${#temporals.format(task.creationDate, 'yyyy-MM-dd HH:mm')}"></td>
                 <td th:text="${#temporals.format(task.dueDate, 'yyyy-MM-dd HH:mm')}"></td>
@@ -66,6 +76,7 @@
                 <th>Task Title</th>
                 <th>Description</th>
                 <th>Status</th>
+                <th>Priority</th>
                 <th>Creation Date</th>
                 <th>Due Date</th>
                 <th>Last Updated</th>
@@ -80,6 +91,15 @@
                 <td>
                     <span th:classappend="'status-badge status-' + ${task.status}"
                           th:text="${task.status}"></span>
+                </td>
+                <td>
+                    <span th:text ="${task.priority}"
+                          class="priority-badge"
+                          th:classappend="${task.priority == priorityClass.MINOR}? 'bg-secondary':
+                              (${task.priority == priorityClass.NORMAL}? 'bg-info':
+                              (${task.priority == priorityClass.CRITICAL}? 'bg-warning': 'bg-danger'))">
+
+                    </span>
                 </td>
                 <td th:text="${#temporals.format(task.creationDate, 'yyyy-MM-dd HH:mm')}"></td>
                 <td th:text="${#temporals.format(task.dueDate, 'yyyy-MM-dd HH:mm')}"></td>
@@ -122,7 +142,7 @@
                     <div class="mb-3">
                         <label for="taskPriority" class="form-label">Priority</label>
                         <select th:field= "*{priority}" class="form-select" id="taskPriority" name="taskPriority">
-                            <option th:each = "priority : ${priorityList}"
+                            <option th:each = "priority : ${priorityClass.values()}"
                                     th:value ="${priority}"
                                     th:text="${priority}"> </option>
                         </select>
