--- a/src/main/resources/templates/fragments/task-badge-container.html
+++ b/src/main/resources/templates/fragments/task-badge-container.html
@@ -3,15 +3,15 @@
 <body>
 <div th:fragment="badge-container" class="d-flex gap-2" id = "badge-container">
     <span th:switch="${currentTask.status}">
-        <span th:case="${TaskStatus.TODO}" class="badge align-self-start bg-info fs-6 py-2"
+        <span th:case="${taskStatus.TODO}" class="badge align-self-start bg-info fs-6 py-2"
               th:text="${currentTask.status}"></span>
-        <span th:case="${TaskStatus.BACKLOG}" class="badge align-self-start bg-secondary fs-6 py-2"
+        <span th:case="${taskStatus.BACKLOG}" class="badge align-self-start bg-secondary fs-6 py-2"
               th:text="${currentTask.status}"></span>
-        <span th:case="${TaskStatus.IN_PROGRESS}" class="badge align-self-start bg-warning fs-6 py-2"
+        <span th:case="${taskStatus.IN_PROGRESS}" class="badge align-self-start bg-warning fs-6 py-2"
               th:text="${currentTask.status}"></span>
-        <span th:case="${TaskStatus.OVERDUE}" class="badge align-self-start bg-danger fs-6 py-2"
+        <span th:case="${taskStatus.OVERDUE}" class="badge align-self-start bg-danger fs-6 py-2"
               th:text="${currentTask.status}"></span>
-        <span th:case="${TaskStatus.DONE}" class="badge align-self-start bg-success fs-6 py-2"
+        <span th:case="${taskStatus.DONE}" class="badge align-self-start bg-success fs-6 py-2"
               th:text="${currentTask.status}"></span>
     </span>
 
@@ -19,15 +19,15 @@
         <span class="badge align-self-start fs-6 py-2 dropdown-toggle cursor-pointer"
               id="priorityDropdown"
               data-bs-toggle="dropdown"
-              th:classappend = "${currentTask.priority == TaskPriority.MINOR}? 'bg-secondary':
-              (${currentTask.priority == TaskPriority.NORMAL}? 'bg-info':
-              (${currentTask.priority == TaskPriority.CRITICAL}? 'bg-warning': 'bg-danger'))">
+              th:classappend = "${currentTask.priority == taskPriority.MINOR}? 'bg-secondary':
+              (${currentTask.priority == taskPriority.NORMAL}? 'bg-info':
+              (${currentTask.priority == taskPriority.CRITICAL}? 'bg-warning': 'bg-danger'))">
             <span th:text="${currentTask.priority}"></span>
         </span>
         <ul class="dropdown-menu">
             <li>
                 <a class="dropdown-item"
-                   th:each="priority : ${TaskPriority.values()}"
+                   th:each="priority : ${taskPriority.values()}"
                    th:classappend="${priority == currentTask.priority} ? 'active'"
                    th:text="${priority}"
                    th:data-task-id="${currentTask.id}"
